test/corpus/chunk.txt
================================================================================
chunk
================================================================================

--------------------------------------------------------------------------------

(chunk)

================================================================================
shebang
================================================================================

#!/usr/bin/env lua

--------------------------------------------------------------------------------

(chunk
  (shebang))

================================================================================
return_statement
================================================================================

return 42

--------------------------------------------------------------------------------

(chunk
  (return_statement
    (expression_list
      (number))))
